<package>
 <name>robotiq_s_model_control_client</name>
  <version>1.0.0</version>
  <description>
    High-level C++ and python libraries for sending commands to the Robotiq S-model hand through the SModelTcpNode.py server from the robotiq_s_model_control package.
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robotiq_s_model_control_client</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>robotiq_s_model_control</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>robotiq_s_model_control</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rospy</run_depend>

</package>


